--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ elit, sed do eiusmod tempor incididunt ut labore consectetur adipiscing elit, se
             </div>
         </div>
         <hr class="footer-hr">
-        <p class="copy-text">Copyright © 2022 Creative IT Institute. All right reserved | FoodZillA</p>
+        <p class="copy-text">All right Copyright © 2023 reserved By FoodZillA. | Sumon</p>
     </div>
     <!-- ====back-to-top==== -->
     <a href="#body" class="back-to-top flex" data-back-to-top><i class='bx bxs-chevron-up'></i></a>
